--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,7 @@ name: Deploy React App to DigitalOcean (CloudPanel)
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build-and-deploy:
