--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,9 +1,8 @@
-name: Deploy React App to DigitalOcean (CloudPanel)
-
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
@@ -18,27 +17,27 @@ jobs:
       with:
         node-version: '18'
 
-    - name: Install dependencies
-      run: npm ci
+    - name: Install Dependencies
+      run: npm install
 
     - name: Build React App
       run: npm run build
 
-    - name: Deploy to DigitalOcean Server via SSH
+    - name: Deploy via SCP to DigitalOcean (CloudPanel)
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         source: "build/*"
-        target: "/home/pluxestudio/htdocs/pluxestudio.com/"  # Replace with your path
+        target: "/home/pluxestudio/htdocs/pluxestudio.com/"  # <-- change this path to your actual web root
         strip_components: 1
 
-    - name: Restart Web Server (Optional)
+    - name: (Optional) Restart Web Server or App
       uses: appleboy/ssh-action@v0.1.10
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          echo "Deployment complete"
+          echo "React app deployed at /home/pluxestudio/htdocs/pluxestudio.com/"
