--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,8 @@ jobs:
       run: npm install
 
     - name: Build React App
-      run: npm run build
+      run: DISABLE_ESLINT_PLUGIN=true npm run build
+
 
     - name: Deploy via SCP to DigitalOcean (CloudPanel)
       uses: appleboy/scp-action@v0.1.4
